--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,16 +1,57 @@
 
 .home{
-    font-family: "Montserrat", sans-serif;
+    font-family:"georgia";
     color:rgb(78, 78, 78)
 }
+
+.isloading {
+    align-self:center ;
+    border: 12px solid #f3f3f3; /* Light grey */
+    border-top: 12px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 10vh;
+    height: 10vh;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+button{
+    font-size: 2vh;
+    font-family:"calibri";
+    margin: 5vh;
+    color:rgb(207, 207, 207);
+    width: 20vw;
+    padding:2vh ;
+    padding-left: 0.4vw;
+    padding-right: 0.4vw;
+    background-color:rgb(0, 107, 215);
+    border-radius: 0.6vw;
+    border: 1px solid white
+ }
+
+ button:hover{
+    background-color:rgb(195, 224, 255);
+    color:rgb(0, 107, 215);
+    border: 1px solid rgb(0, 107, 215);
+ }
+ button:active {
+    background-color:rgb(56, 138, 219);
+
+  }
 
 .boxinput{
     margin:5vh;
     display: flex;
     flex-direction: column;
+   
     .input{
         margin: 1.1vh;
         height: 35px;
+        width: 23vw;
     }
 }
 
@@ -20,8 +61,8 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-
 }
+
 
 .page1{
  .title{
@@ -37,14 +78,7 @@
 
 }
 
-button{
-    margin: 5vh;
-    color:white;
-    width: 20vw;
-    padding:2vh ;
-    background-color:rgb(0, 107, 215);
-    border-radius: 0.6vw;
- }
+
 
 .page2{
  .text{
@@ -58,21 +92,31 @@ button{
     width: 35vw;
     text-align: center;
   }
-    .emerge{
+  .message{
+    color: rgb(255, 107, 107);
+    font-size: 2.5vh;
+  }
+    .emerge,.emerge1{
         display: flex;
         justify-content: space-between;
         background-color: rgb(237, 237, 237);
         padding-right: 5px;
         padding-left: 5px;
+        margin: 0.5vh;
         .emergetittle{
             color: rgb(0, 107, 215);
         }
         .emergetext{
             font-size: 2.5vh;
         }
-        .emergebutton{
-            width: 10vw;
+        .emergebutton, .emergebutton1{
+            width: 4vw;
         }
+        .emergebutton1{
+            background-color:rgb(196, 90, 90);
+        }
+        .emerge1{
+            align-items: center;}
     }
 }
 
@@ -86,16 +130,19 @@ button{
         justify-content: space-around;
     }
     .target{
-        margin:3vw;
+        margin:2vw;
+        padding: 1vw;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        height: 25vh;
+        height: 30vh;
+        width: 20vh;
         border-radius: 2vh;
         border: 1px solid rgb(158, 158, 158);
         .target1{
-        
+            text-align: center;
+            
             .targettitle{
             font-size: 4vh;
             }
